Blueprint CSS Framework Change Log

* URL:    code.google.com/p/blueprintcss
* Mail:   groups.google.com/group/blueprintcss
* News:   bjorkoy.com

----------------------------------------------------------------

Version 0.x - Date TBD
--
  New features:
    * Higher compression rate. [OFB]
    * Alternating table row colors. [OFB]
    * 
  
  Bug fixes:
    * Sidebar alignment in tests/sample.html. [OFB]
    * Line-height on sub/sup. [OFB]
    * Clearfix not properly applied to container. [OFB]
    * Misc validation errors in tests. [OFB]
    * Proper margin on address. [OFB]
    * Unwanted bottom margin on nested lists. [OFB]
    * Form labels with unwanted fancy-type indentation. [OFB]
    * Proper margin on all form elements. [OFB]
    * No margins for images in headings. [OFB]
    * 

  Misc:
    * Improved structure in print.css. [OFB]
    * Added another level of pull/push. [OFB]
    * Dual-licensed under MIT and GPL licenses. [OFB]
    * 


Version 0.6 - 21/9/2007
--
  * Created a new plugin, "iepngfix", that adds support for PNG transparency in IE5.5+ [OFB]
  * Added an IE stylesheet, updated the test files and the readme accordingly [OFB]
  * Re-added improved support for em units [OFB]
  * Lots of minor changes to typography.css and reset.css, provided by Christian Montoya [OFB]
  * Extracted the fancy typography section in typography.css to a new plugin [OFB]
  * Extracted the support for CSS buttons into a new plugin. [OFB]
  * Added new plugin structure. [OFB]
  * Changed some default fonts so that BP works better with ClearType in XP [OFB]
  * Re-added the hack for clearing floats without extra markup. [OFB]
  * Added Changelog.txt to track changes in each release. [GR]
  * Cleaned up and rationalized SVN dir structure. [GR, OFB]
  * print.css : removed reference to 'baseline.png' as it no longer exists. [GR]
  * grid.css : removed reference to '.first' css class as it no longer exists. [GR]